Fix text align center on whole app

--- a/src/pages/home-page/home-page.css
+++ b/src/pages/home-page/home-page.css
@@ -6,6 +6,7 @@
     justify-content: center;
     margin: 0 auto;
     max-width: 220px;
+    text-align: center;
 }
 
 .homepage-container .branding {
