--- a/src/pages/login-page/login.css
+++ b/src/pages/login-page/login.css
@@ -1,3 +1,6 @@
+.login-page {
+    text-align: center;
+}
 .login-page .logo {
     height: 45px;
     width: 45px;
