--- a/src/pages/profile-setup-page/profile-setup.css
+++ b/src/pages/profile-setup-page/profile-setup.css
@@ -5,6 +5,7 @@
     flex-direction: column;
     align-items: center;
     background: rgb(16, 61, 187);
+    text-align: center;
 }
 
 .profile-setup-page .ant-carousel {
