--- a/src/pages/signup-page/signup.css
+++ b/src/pages/signup-page/signup.css
@@ -10,6 +10,7 @@
     justify-content: center;
     margin: 0 auto;
     max-width: 280px;
+    text-align: center;
 }
 
 .signup-page-container .branding {
